src/App.scss
/* ... */
.namebox {
    position: absolute;
    top: 5.5rem;

    margin: var(--pad-min) var(--pad-windowleft);
}

.iconsbar {
    @include flex-line(column);

    width: 100%;
    margin-top: 17rem;
    padding: var(--pad-min) var(--pad-windowleft);

    .link-faicon {
        &:link, &:visited {
            position: relative;
            margin: var(--pad-min) 0 8px 0;
        
            font-size: 2.8rem;
            color: var(--color-midnight);
            filter: drop-shadow(0px 0px 4px var(--color-white));
            opacity: .7;

            svg {
                @include nav-faicon-in-base();
            }

            &::after {
                content: attr(data-name);
                position: absolute;
                top: 0.5rem;
                left: 4.7rem;
                white-space: nowrap;
                font-size: 1.3rem;
                font-weight: var(--fw-bold);
                filter: drop-shadow(0px 0px 5px var(--color-white));
                color: transparent;
                opacity: 0;

                transition: color .1s ease-in, opacity .4s ease-in;
            }

        }
        &.link-faicon--resume:link, &.link-faicon--resume:visited {
            margin-left: 2px; // for centering resume icon if list is left-justified
            margin-top: 4px;

            font-size: 2.6rem;
        }
        &:hover, &:active {
            opacity: 1;

            color: var(--color-white);
            filter: none;

            & svg {
                animation: nav-faicon-out .2s ease-out 0s 1 forwards;
            }

            &::after {
                color: var(--color-white);
                opacity: 1;
            }
        }
    }
}

.navlist {
    @include flex-line(column);

    padding: 15rem var(--pad-windowleft) 8rem calc(var(--pad-windowleft) - .2vw);
    width: 100%;

    li {
        margin-bottom: 11px;

        &:last-child::before {
            content: "⤙⤚";
            position: relative;
            top: -.6rem;
            color: var(--color-white);
            font-size: 2rem;
        }

        .link-navlist {
            &:link, &:visited {
                font-family: var(--ff-body);
                font-size: 1.5rem;
                letter-spacing: 1px;
                font-weight: var(--fw-bold);
                text-decoration: none;
                text-transform: lowercase;

                color: var(--color-white);
                text-shadow: 0px 2px 2px #000;

                .faicon--iconbar {
                    position: relative;
                    left: 2px;
                    opacity: 0;
                    color: var(--color-primary);

                    transition: opacity .5s ease-out;
                }

                div {
                    position: relative;
                    transition: color .1s ease-in, text-shadow .2s ease-in;

                    &::after {
                        content: "✧";
                        position: absolute;
                        top: .1rem;
                        right: -1.7rem;
                        width: min-content;
                        height: 100%;
                        color: var(--color-white);
                        opacity: 0;

                        transition: opacity .5s ease-out;
                    }
                }
            }
            &:hover, &:active {
                color: var(--color-blue);

                div::after {
                    opacity: 1;
                }

                .faicon--iconbar {
                    opacity: 1;
                }
            }
            &.active {
                color: var(--color-primary);
                text-shadow: 0px 1px 1px #000;
                cursor: default;

                div::after {
                    content: "✦";
                    color: var(--color-primary);
                    opacity: 1;
                }

                .faicon--iconbar {
                    opacity: 1;
                }
            }
        }

        &:last-child .link-navlist div::after {
            display: none;
        }
    }
}

.dropdown-converter {
    position: absolute;
    top: 5.3rem;
    right: 1.5rem;
}

.dropdown-toggle-btn {
    display: none;
    color: var(--color-blue);
    font-family: var(--ff-body);
    font-size: 1.5rem;
    letter-spacing: 1px;
    font-weight: var(--fw-bold);
    text-decoration: none;
    text-transform: capitalize;
    text-shadow: 0px 2px 3px #000;
    border: none;
    background-color: transparent;
}

.dropdown-converter .dropdown-toggle-btn {
    display: block;
}

.dropdown-converter .navlist {
    position: absolute;
    top: 0.5rem;
    right: -1.5rem;
    z-index: 2;
    background: #62351cf7;
    visibility: hidden;
    height: 17rem;
    margin-top: 2rem;
    padding: 1.1rem 1.4rem 1.1rem 3rem;
    align-items: flex-end;
    transform: translateX(-40%);
    transition: visibility .15s ease-out;
}

.dropdown-converter:hover .navlist {
    visibility: inherit;
    pointer-events: auto;
}


// STAGES
.stage { // static viewport containter
    position: relative;
    overflow-y: auto;
    // background-image: linear-gradient(180deg, rgba(53, 27, 27, 0.89) 28%, #1d100adb 100%);
}

.page { // scrolling canvas
    @include flex-line(column);

    position: relative;
    min-height: 100vh;
    padding: 11rem var(--space-lrg) 6rem var(--pad-pageleft);

    &.page--home {
        padding-top: 15.6rem;
    }
}
/* ... */

